feat: sse whether upload is in progress